<resources>
    <string name="app_name">BlueApp</string>
    <string name="temperatura">Temperatura:</string>
    <string name="co2_level">Nivel de CO2:</string>
    <string name="int_lum">Intensidad lumínica:</string>
    <string name="personas">Número de personas:</string>
    <string name="send">Enviar</string>
    <string name="empty_text">-</string>
    <string name="menu_devices">Dispositivos disponibles</string>
    <string name="menu_graphics">Gráficas</string>
    <string name="menu_settings">Ajustes</string>
    <string name="mac_test_address">patata</string>
    <string name="ble_not_supported">Su dispositivo no es compatible con BLE</string>
    <string name="scan">Escanear</string>
    <string name="device_name">Nombre:</string>
    <string name="device_address">Dirección:</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="disconnect">Desconectar</string>
    <string name="choose_device">No tienes seleccionado ningún dispositivo</string>
    <string name="status">Estado:</string>
    <string name="read">Leer</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="confirm_connection">¿Conectarse al dispositivo seleccionado?</string>
    <string name="coarse_location_access_title">Esta aplicación necesita acceso a la localización</string>
    <string name="coarse_location_access_message">Por favor, conceda el acceso a la ubicación para que esta aplicación pueda detectar los periféricos.</string>
    <string name="accept">Aceptar</string>
    <string name="concede">Conceder</string>
    <string name="device_rssi">Rssi:</string>
    <string name="cancel">Cancelar</string>
    <string name="unknown_device">Desconocido</string>
    <string name="connect">Conectar</string>
    <string name="device_uuids">UUIDs:</string>
    <string name="disconnected">Desconectado</string>
    <string name="reconnect">Conectar de nuevo</string>
    <string name="connected">Conectado</string>
</resources>
